fixed css so search works on mobile, other touch ups

--- a/src/style/homepage.scss
+++ b/src/style/homepage.scss
@@ -44,17 +44,16 @@
                         }
 
                         @media only screen and (max-width: 421px){
-                            margin-top: -2em;
+                            padding-top: -2em;
                         }
 
                         .quick-links {
                             display: grid;
-                            max-height: 70%;
                             grid-template-columns: 1fr 1fr 1fr 1fr;
                             text-decoration: none;
+                            margin: 1em;
 
                             @media only screen and (max-width: 421px){
-                                margin: -3em;
                                 grid-gap: 0;
 
                                 .quick-link {
