--- a/src/style/searchPage.scss
+++ b/src/style/searchPage.scss
@@ -12,7 +12,7 @@
     .page-buttons {
         display: flex;
         justify-content: center;
-        width: 60vw;
+        max-width: 60vw;
 
         .page-button {
             min-width: 3.4em;
